cambios en la generacion del presupuesto 2